--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,10 @@ jobs:
       uses: actions/checkout@v4.2.2
     - name: Install depot_tools
       run: |
-        git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
+        git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git
         echo "${{ github.workspace }}/depot_tools" >> $GITHUB_PATH
+    - name: Fetch iOS code
+      working-directory: ${{ github.workspace }}/chromium
+      run: fetch ios
+    - name: Build Chromium
+      run: autoninja -C out/Debug-iphonesimulator gn_all
