--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/checkout@v4.2.2
     - name: Select Xcode version
       run: sudo xcode-select -s '/Applications/Xcode_16.2.app/Contents/Developer'
+    - name: Install iOS platforms
+      run: xcodebuild -downloadPlatform iOS -buildVersion 18.2
     - name: Install sccache
       uses: mozilla-actions/sccache-action@v0.0.8
     - name: Enable eccache
