--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,18 +35,18 @@ jobs:
       run: fetch --no-history ios
     - name: Copy .setup-gn
       run: cp -r ./src/.setup-gn ./chromium/
-    - name: Show help for setup-gn.py
-      working-directory: ${{ github.workspace }}/chromium/src
-      run: python ios/build/tools/setup-gn.py --help
     - name: Set up the build
       working-directory: ${{ github.workspace }}/chromium/src
       run: python ios/build/tools/setup-gn.py
-    - name: Show files
-      working-directory: ${{ github.workspace }}/chromium/src
-      run: ls out/build
-    - name: Show Targets
-      working-directory: ${{ github.workspace }}/chromium/src
-      run: xcodebuild -list -project out/build/all.xcodeproj
+    - name: Archive the configured source
+      run: 7zz a -mx9 -t7z -x"!.*" chromium.7z chromium
+    - name: Upload source artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: chromium
+        path: chromium.7z
+        retention-days: 1
+        compression-level: 0
     - name: Build Chromium
       working-directory: ${{ github.workspace }}/chromium/src
       run: autoninja -C out/Release-iphoneos web_view_signed_bundle
