--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - name: Checkout ${{ github.repository }}
       uses: actions/checkout@v4.2.2
+    - name: Check 7zip
+      run: where 7z
     - name: Select Xcode version
       run: sudo xcode-select -s '/Applications/Xcode_16.2.app/Contents/Developer'
     - name: Install iOS platforms
@@ -39,7 +41,7 @@ jobs:
       working-directory: ${{ github.workspace }}/chromium/src
       run: python ios/build/tools/setup-gn.py
     - name: Archive the configured source
-      run: 7zz a -mx9 -t7z chromium.7z chromium
+      run: 7z a -mx9 -t7z chromium.7z chromium
     - name: Upload source artifact
       uses: actions/upload-artifact@v4.6.1
       with:
