--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout ${{ github.repository }}
       uses: actions/checkout@v4.2.2
     - name: Check 7zip
-      run: where 7z
+      run: which 7z
     - name: Select Xcode version
       run: sudo xcode-select -s '/Applications/Xcode_16.2.app/Contents/Developer'
     - name: Install iOS platforms
