--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,6 @@ on:
 env:
   FORCE_COLOR: 'true'
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build:
     name: Build
@@ -24,8 +20,6 @@ jobs:
       run: sudo xcode-select -s '/Applications/Xcode_16.2.app/Contents/Developer'
     - name: Install iOS platforms
       run: xcodebuild -downloadPlatform iOS -buildVersion 18.2
-    - name: Install sccache
-      uses: mozilla-actions/sccache-action@v0.0.8
     - name: Install depot_tools
       run: |
         git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git
@@ -35,11 +29,8 @@ jobs:
       run: fetch --no-history ios
     - name: Copy .setup-gn
       run: cp -r ./src/.setup-gn ./chromium/
-    - name: Set up the build
-      working-directory: ${{ github.workspace }}/chromium/src
-      run: python ios/build/tools/setup-gn.py
-    - name: Archive the configured source
-      run: 7z a -mx9 -t7z chromium.7z chromium
+    - name: Archive source
+      run: 7z a -bsp2 -mx9 -t7z chromium.7z chromium
     - name: Upload source artifact
       uses: actions/upload-artifact@v4.6.1
       with:
@@ -47,9 +38,14 @@ jobs:
         path: chromium.7z
         retention-days: 1
         compression-level: 0
+    - name: Install ccache
+      run: brew install ccache
+    - name: Set up the build
+      working-directory: ${{ github.workspace }}/chromium/src
+      run: python ios/build/tools/setup-gn.py
     - name: Build Chromium
       working-directory: ${{ github.workspace }}/chromium/src
-      run: autoninja -C out/Release-iphoneos web_view_signed_bundle
+      run: autoninja -C out/Debug-iphonesimulator web_view_signed_bundle
       env:
         SCCACHE_GHA_ENABLED: "true"
         CCACHE_BASEDIR: ${{ github.workspace }}/chromium
