--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
         CCACHE_BASEDIR: ${{ github.workspace }}/chromium
         CCACHE_DIR: ${{ github.workspace }}/.ccache
         CCACHE_SLOPPINESS: time_macros
+      timeout-minutes: 30
     - name: Upload build artifact
       uses: actions/upload-artifact@v4.6.1
       with:
@@ -58,6 +59,9 @@ jobs:
         if-no-files-found: error
         retention-days: 1
         compression-level: 0
+    - if: always()
+      name: Sleep
+      run: sleep 300
     - if: always()
       name: Save Ccache directory
       uses: actions/cache/save@v4.2.2
