--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         CCACHE_BASEDIR: ${{ github.workspace }}/chromium
         CCACHE_DIR: ${{ github.workspace }}/.ccache
         CCACHE_SLOPPINESS: time_macros
-      timeout-minutes: 30
+      timeout-minutes: 10
     - name: Upload build artifact
       uses: actions/upload-artifact@v4.6.1
       with:
@@ -61,7 +61,7 @@ jobs:
         compression-level: 0
     - if: always()
       name: Sleep
-      run: sleep 300
+      run: sleep 30m
     - if: always()
       name: Save Ccache directory
       uses: actions/cache/save@v4.2.2
