--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,12 +43,12 @@ jobs:
       run: python ios/build/tools/setup-gn.py
     - name: Build Chromium
       working-directory: ${{ github.workspace }}/chromium/src
-      run: autoninja -C out/Release-${{ matrix.target }} web_view_signed_bundle -j 1
+      run: autoninja -C out/Release-${{ matrix.target }} web_view_signed_bundle
       env:
         CCACHE_BASEDIR: ${{ github.workspace }}/chromium
         CCACHE_DIR: ${{ github.workspace }}/.ccache
         CCACHE_SLOPPINESS: time_macros
-      timeout-minutes: 30
+      timeout-minutes: 10
     - name: Upload build artifact
       uses: actions/upload-artifact@v4.6.1
       with:
@@ -64,11 +64,112 @@ jobs:
         key: ccache-${{ matrix.target }}
         path: ${{ github.workspace }}/.ccache
     - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
       name: Sleep
-      run: sleep 1800
+      run: sleep 300
     - if: always()
       name: Save Ccache directory
       uses: actions/cache/save@v4.2.2
       with:
         key: ccache-${{ matrix.target }}
         path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
+      name: Sleep
+      run: sleep 300
+    - if: always()
+      name: Save Ccache directory
+      uses: actions/cache/save@v4.2.2
+      with:
+        key: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
+      name: Sleep
+      run: sleep 300
+    - if: always()
+      name: Save Ccache directory
+      uses: actions/cache/save@v4.2.2
+      with:
+        key: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
+      name: Sleep
+      run: sleep 300
+    - if: always()
+      name: Save Ccache directory
+      uses: actions/cache/save@v4.2.2
+      with:
+        key: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
+      name: Sleep
+      run: sleep 300
+    - if: always()
+      name: Save Ccache directory
+      uses: actions/cache/save@v4.2.2
+      with:
+        key: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
+    - if: always()
+      name: Sleep
+      run: sleep 300
+    - if: always()
+      name: Save Ccache directory
+      uses: actions/cache/save@v4.2.2
+      with:
+        key: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+    - if: always()
+      name: Upload ccache artifact
+      uses: actions/upload-artifact@v4.6.1
+      with:
+        name: ccache-${{ matrix.target }}
+        path: ${{ github.workspace }}/.ccache
+        if-no-files-found: error
+        retention-days: 1
