--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     branches: [main]
-  pull_request:include-hidden-files: true
+  pull_request:
     branches: [main]
 
 env:
