--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,156 +15,96 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        target: [iphonesimulator]
+        number: [1, 2, 3, 4, 5]
       fail-fast: false
+      max-parallel: 1
     steps:
     - name: Checkout ${{ github.repository }}
       uses: actions/checkout@v4.2.2
-    - name: Select Xcode version
-      run: sudo xcode-select -s '/Applications/Xcode_16.2.app/Contents/Developer'
-    - name: Install ccache
+    - name: Select Xcode Version
+      run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+    - name: Install Ccache
       run: brew install ccache
-    - name: Restore Ccache directory
+    - if: ${{ matrix.number == 1 }}
+      name: Restore Ccache Directory
       uses: actions/cache/restore@v4.2.2
       with:
-        key: ccache-${{ matrix.target }}
+        key: ccache-iphonesimulator
+        path: ccache
+    - if: ${{ matrix.number != 1 }}
+      name: Download Ccache Artifact
+      uses: actions/download-artifact@v4.1.9
+      with:
+        name: ccache-iphonesimulator
         path: ccache
     - name: Install depot_tools
       run: |
         git clone --depth 1 https://chromium.googlesource.com/chromium/tools/depot_tools.git
         echo "${{ github.workspace }}/depot_tools" >> $GITHUB_PATH
     - name: Fetch iOS code
-      working-directory: ${{ github.workspace }}/chromium
+      working-directory: chromium
       run: fetch --no-history ios
     - name: Copy .setup-gn
       run: cp -r ./src/.setup-gn ./chromium/
     - name: Set up the build
-      working-directory: ${{ github.workspace }}/chromium/src
+      working-directory: chromium/src
       run: python ios/build/tools/setup-gn.py
-    - name: Build Chromium
-      working-directory: ${{ github.workspace }}/chromium/src
-      run: autoninja -C out/Release-${{ matrix.target }} web_view_signed_bundle
+    - id: build
+      name: Build Chromium
+      working-directory: chromium/src
+      run: autoninja -C out/Release-iphonesimulator web_view_signed_bundle
       env:
         CCACHE_BASEDIR: ${{ github.workspace }}/chromium
         CCACHE_DIR: ${{ github.workspace }}/ccache
         CCACHE_SLOPPINESS: time_macros
+      continue-on-error: true
       timeout-minutes: 10
-    - name: Upload build artifact
+    - if: ${{ steps.build.outcome == 'success' }}
+      name: Upload build artifact
       uses: actions/upload-artifact@v4.6.1
       with:
-        name: ChromeWebView-${{ matrix.target }}
-        path: ${{ github.workspace }}/chromium/src/out/Release-${{ matrix.target }}/ChromeWebView.framework
+        name: chromewebview-iphonesimulator
+        path: chromium/src/out/Release-iphonesimulator/ChromeWebView.framework
         if-no-files-found: error
         retention-days: 1
-        compression-level: 0
         include-hidden-files: true
-    - if: always()
+    - if: ${{ steps.build.outcome == 'success' }}
       name: Save Ccache directory
       uses: actions/cache/save@v4.2.2
       with:
-        key: ccache-${{ matrix.target }}
+        key: ccache-iphonesimulator
         path: |
           ccache
           !ccache/tmp
-    - if: always()
+    - if: ${{ steps.build.outcome == 'success' }}
+      name: Cancelling this workflow run.
+      uses: actions/github-script@v6
+      with:
+        script: |
+          github.rest.actions.cancelWorkflowRun({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            run_id: context.runId
+          })
+    - if: ${{ steps.build.outcome == 'success' }}
+      name: Waiting for workflow to cancel
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const delay = ms => new Promise(res => setTimeout(res, ms));
+  
+          while (true) {
+            core.info('Waiting for workflow to cancel ...');
+            await delay(5000);
+          }
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'cancelled' }}
       name: Upload ccache artifact
       uses: actions/upload-artifact@v4.6.1
       with:
-        name: ccache-${{ matrix.target }}
+        name: ccache-iphonesimulator
         path: |
           ccache
           !ccache/tmp
         if-no-files-found: error
         retention-days: 1
         include-hidden-files: true
-    - if: always()
-      name: Sleep
-      run: sleep 300
-    - if: always()
-      name: Save Ccache directory
-      uses: actions/cache/save@v4.2.2
-      with:
-        key: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-    - if: always()
-      name: Upload ccache artifact
-      uses: actions/upload-artifact@v4.6.1
-      with:
-        name: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-        if-no-files-found: error
-        retention-days: 1
-        include-hidden-files: true
-    - if: always()
-      name: Sleep
-      run: sleep 300
-    - if: always()
-      name: Save Ccache directory
-      uses: actions/cache/save@v4.2.2
-      with:
-        key: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-    - if: always()
-      name: Upload ccache artifact
-      uses: actions/upload-artifact@v4.6.1
-      with:
-        name: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-        if-no-files-found: error
-        retention-days: 1
-        include-hidden-files: true
-    - if: always()
-      name: Sleep
-      run: sleep 300
-    - if: always()
-      name: Save Ccache directory
-      uses: actions/cache/save@v4.2.2
-      with:
-        key: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-    - if: always()
-      name: Upload ccache artifact
-      uses: actions/upload-artifact@v4.6.1
-      with:
-        name: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-        if-no-files-found: error
-        retention-days: 1
-        include-hidden-files: true
-    - if: always()
-      name: Sleep
-      run: sleep 300
-    - if: always()
-      name: Save Ccache directory
-      uses: actions/cache/save@v4.2.2
-      with:
-        key: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-    - if: always()
-      name: Upload ccache artifact
-      uses: actions/upload-artifact@v4.6.1
-      with:
-        name: ccache-${{ matrix.target }}
-        path: |
-          ccache
-          !ccache/tmp
-        if-no-files-found: error
-        retention-days: 1
-        include-hidden-files: true
-    - if: always()
-      name: Sleep
-      run: sleep 300
