--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
         if-no-files-found: error
         retention-days: 1
         include-hidden-files: true
-    - if: ${{ steps.build.outcome == 'success' }}
+    - if: ${{ matrix.number == 5 || steps.build.outcome == 'success' }}
       name: Save Ccache directory
       uses: actions/cache/save@v4.2.2
       with:
@@ -76,9 +76,9 @@ jobs:
         path: |
           ccache
           !ccache/tmp
-    - if: ${{ steps.build.outcome == 'success' }}
-      name: Cancelling this workflow run.
-      uses: actions/github-script@v6
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
+      name: Cancel Workflow
+      uses: actions/github-script@v7.0.1
       with:
         script: |
           github.rest.actions.cancelWorkflowRun({
@@ -86,9 +86,9 @@ jobs:
             repo: context.repo.repo,
             run_id: context.runId
           })
-    - if: ${{ steps.build.outcome == 'success' }}
-      name: Waiting for workflow to cancel
-      uses: actions/github-script@v6
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
+      name: Waiting for Cancel
+      uses: actions/github-script@v7.0.1
       with:
         script: |
           const delay = ms => new Promise(res => setTimeout(res, ms));
@@ -97,7 +97,7 @@ jobs:
             core.info('Waiting for workflow to cancel ...');
             await delay(5000);
           }
-    - if: ${{ matrix.number != 5 && steps.build.outcome == 'cancelled' }}
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'failure' }}
       name: Upload ccache artifact
       uses: actions/upload-artifact@v4.6.1
       with:
