--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: macos-26
     strategy:
       matrix:
         number: [1, 2, 3, 4, 5]
@@ -20,20 +20,20 @@ jobs:
       max-parallel: 1
     steps:
     - name: Checkout ${{ github.repository }}
-      uses: actions/checkout@v4.2.2
+      uses: actions/checkout@v5.0.0
     - name: Select Xcode Version
       run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
     - name: Install Ccache
       run: brew install ccache
     - if: ${{ matrix.number == 1 }}
       name: Restore Ccache Directory
-      uses: actions/cache/restore@v4.2.2
+      uses: actions/cache/restore@v4.3.0
       with:
         key: ccache-iphonesimulator
         path: ccache
     - if: ${{ matrix.number != 1 }}
       name: Download Ccache Artifact
-      uses: actions/download-artifact@v4.1.9
+      uses: actions/download-artifact@v6.0.0
       with:
         name: ccache-iphonesimulator
         path: ccache
@@ -70,7 +70,7 @@ jobs:
         include-hidden-files: true
     - if: ${{ matrix.number == 5 || steps.build.outcome == 'success' }}
       name: Save Ccache directory
-      uses: actions/cache/save@v4.2.2
+      uses: actions/cache/save@v4.3.0
       with:
         key: ccache-iphonesimulator
         path: |
@@ -78,7 +78,7 @@ jobs:
           !ccache/tmp
     - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
       name: Cancel Workflow
-      uses: actions/github-script@v7.0.1
+      uses: actions/github-script@v8.0.0
       with:
         script: |
           github.rest.actions.cancelWorkflowRun({
@@ -88,7 +88,7 @@ jobs:
           })
     - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
       name: Waiting for Cancel
-      uses: actions/github-script@v7.0.1
+      uses: actions/github-script@v8.0.0
       with:
         script: |
           const delay = ms => new Promise(res => setTimeout(res, ms));
@@ -99,7 +99,7 @@ jobs:
           }
     - if: ${{ matrix.number != 5 && steps.build.outcome == 'failure' }}
       name: Upload ccache artifact
-      uses: actions/upload-artifact@v4.6.1
+      uses: actions/upload-artifact@v5.0.0
       with:
         name: ccache-iphonesimulator
         path: |
