--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,9 @@ jobs:
     - name: Checkout ${{ github.repository }}
       uses: actions/checkout@v5.0.0
     - name: Select Xcode Version
-      run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      run: sudo xcode-select -s /Applications/Xcode.app
+    - name: Download Xcode iOS Platform
+      run: xcodebuild -downloadPlatform iOS
     - name: Install Ccache
       run: brew install ccache
     - if: ${{ matrix.number == 1 }}
