--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: macos-26
     strategy:
       matrix:
-        number: [1, 2, 3, 4, 5, 6]
+        number: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
       fail-fast: false
       max-parallel: 1
     steps:
@@ -72,7 +72,7 @@ jobs:
         if-no-files-found: error
         retention-days: 1
         include-hidden-files: true
-    - if: ${{ matrix.number == 6 || steps.build.outcome == 'success' }}
+    - if: ${{ matrix.number == 10 || steps.build.outcome == 'success' }}
       name: Save Ccache directory
       uses: actions/cache/save@v4.3.0
       with:
@@ -80,7 +80,7 @@ jobs:
         path: |
           ccache
           !ccache/tmp
-    - if: ${{ matrix.number != 6 && steps.build.outcome == 'success' }}
+    - if: ${{ matrix.number != 10 && steps.build.outcome == 'success' }}
       name: Cancel Workflow
       uses: actions/github-script@v8.0.0
       with:
@@ -90,7 +90,7 @@ jobs:
             repo: context.repo.repo,
             run_id: context.runId
           })
-    - if: ${{ matrix.number != 6 && steps.build.outcome == 'success' }}
+    - if: ${{ matrix.number != 10 && steps.build.outcome == 'success' }}
       name: Waiting for Cancel
       uses: actions/github-script@v8.0.0
       with:
@@ -101,7 +101,7 @@ jobs:
             core.info('Waiting for workflow to cancel ...');
             await delay(5000);
           }
-    - if: ${{ matrix.number != 6 && steps.build.outcome == 'failure' }}
+    - if: ${{ matrix.number != 10 && steps.build.outcome == 'failure' }}
       name: Upload ccache artifact
       uses: actions/upload-artifact@v5.0.0
       with:
