--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,6 @@ jobs:
       uses: actions/cache/restore@v4.3.0
       with:
         key: ccache-iphonesimulator
-        restore-keys: ccache-
         path: ccache
     - if: ${{ matrix.number != 1 }}
       name: Download Ccache Artifact
@@ -64,7 +63,7 @@ jobs:
       continue-on-error: true
       timeout-minutes: 300
     - if: ${{ steps.build.outcome == 'success' }}
-      name: Upload build artifact
+      name: Upload Build Artifact
       uses: actions/upload-artifact@v4.6.1
       with:
         name: chromewebview-iphonesimulator
@@ -73,7 +72,7 @@ jobs:
         retention-days: 1
         include-hidden-files: true
     - if: ${{ matrix.number == 10 || steps.build.outcome == 'success' }}
-      name: Save Ccache directory
+      name: Save Ccache Directory
       uses: actions/cache/save@v4.3.0
       with:
         key: ccache-iphonesimulator
@@ -102,7 +101,7 @@ jobs:
             await delay(5000);
           }
     - if: ${{ matrix.number != 10 && steps.build.outcome == 'failure' }}
-      name: Upload ccache artifact
+      name: Upload Ccache Artifact
       uses: actions/upload-artifact@v5.0.0
       with:
         name: ccache-iphonesimulator
